--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
+
+            <div>
+                <p>Score</p>
+                <p id="player-score">You: 0</p>
+                <p id="computer-score">Computer: 0</p>
+            </div>
         </div>
     </body>
 </html>
